<resources>
    <string name="app_name">Getiii</string>
    <string name="countryCode">TH</string>
    <string name="platform">3</string>
    <!--    <string name="domain">www.sheiii.com</string>-->
    <string name="site_id">0</string>


    <string name="title_home">首页</string>
    <string name="title_dashboard">分类</string>
    <string name="title_notifications">购物车</string>
    <string name="title_four">个人中心</string>
    <string name="title">Title</string>
    <string name="buy_button">BUY</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="home_item_img" />
    <string name="home_title">Home Title</string>
    <string name="home_icon">TODO</string>
    <string name="also_like">你可能喜欢</string>
    <string name="retry">Retry</string>
    <string name="go_cart">去购物车</string>
    <string name="search">搜索</string>
    <string name="title_activity_product_details">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="empty">TODO</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="service_title">服务说明</string>
    <string name="choice">请选择</string>
    <string name="review">评价</string>
    <string name="more_reviews">更多评价</string>
    <string name="size_chart">尺码表</string>
    <string name="how_to_measure">尺码表</string>
    <string name="quantity_title">数量</string>
    <string name="save">保存</string>
    <string name="place_order">下单</string>
    <string name="all">全部</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="delete_msg">确认将改物品从购物车中删除吗？</string>
    <string name="delete_title">删除确认</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="facebook_login">Facebook登录</string>
    <string name="facebook_app_id">470152080351392</string>
    <string name="fb_login_protocol_scheme">fb470152080351392</string>
    <string name="delivery_address">收货地址</string>
    <string name="coupon">优惠券</string>
    <string name="dont_use_coupon">不使用优惠券</string>
    <string name="discount">折扣</string>
    <string name="pay_type">支付方式</string>
    <string name="subtotal">小计</string>
    <string name="freight">运费</string>
    <string name="total">总计</string>
    <string name="message_title">留言</string>
    <string name="hint_enter_message">请输入您的留言</string>
    <string name="product_list">商品列表</string>
    <string name="piece">件</string>
    <string name="add_new_address">添加新地址</string>
    <string name="address_hint_location">区域</string>
    <string name="address_hint_user_name">姓名</string>
    <string name="address_hint_user_phone">手机号</string>
    <string name="address_hint_city">城市</string>
    <string name="address_hint_town">县/区/镇/乡</string>
    <string name="address_hint_district">街道/路名/段名</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plz_select">请选择</string>
    <string name="search_hint">请输入关键字</string>
    <string name="todo">TODO</string>
    <string name="add_address">新增地址</string>
    <string name="order_success">下单成功!</string>
    <string name="view_order">订单详情</string>
    <string name="continue_shopping">继续购物</string>
    <string name="order_num">订单号</string>
    <string name="order_amount">订单数量</string>
    <string name="order_user_name">收货人</string>
    <string name="order_user_phone">联系方式</string>
    <string name="order_shopping_address">收货地址</string>
    <string name="more">更多</string>
    <string name="my_order">我的订单</string>
    <string name="wish_list">收藏列表</string>
    <string name="wallet">钱包</string>
    <string name="points">积分</string>
    <string name="unpaid">未支付</string>
    <string name="processing">配货中</string>
    <string name="shipping">运输中</string>
    <string name="return_ing">退款中</string>
    <string name="address">地址</string>
    <string name="support">客服</string>
    <string name="help">帮助</string>
    <string name="feedback">反馈</string>
    <string name="my_server">我的服务</string>
    <string name="setting">设置</string>
    <string name="logout">登出</string>
    <string name="change_currency">更改货币</string>
    <string name="refund_policy">退款政策</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="terms_conditions">协议条款</string>
    <string name="intellectual_property">知识产权</string>
    <string name="order">订单</string>
    <string name="traking">订单追踪</string>
    <string name="details">详情</string>
    <string name="order_details">订单详情</string>
    <string name="order_status">订单状态</string>
    <string name="order_date">订单时间</string>
    <string name="shipping_address">送货地址</string>
    <string name="subtotal_fee">小计优惠</string>
    <string name="prom_discount">活动优惠</string>
    <string name="shipping_free">运费</string>
    <string name="add_cart">加入购物车</string>
    <string name="user_info_phone_hint">请输入手机号码</string>
    <string name="user_info_email_hint">请输入邮箱</string>
    <string name="user_info_gender_hint">请选择你的性别</string>
    <string name="user_info_birth_hint">请选择出生日期</string>
    <string name="user_info_name_hint">请输入你的用户名</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="cart_empty_tips">购物车为空</string>
    <string name="buy_now">立即购买</string>
    <string name="flashdeal">限时促销</string>
    <string name="sale_promotion">购买优惠</string>
    <string name="end_time">剩余时间</string>

    <string name="checkout">下单</string>
    <string name="facebook_login_tips">It is recommended to sign in with Facebook, which is convenient for view orders and tracking delivery information.</string>
    <string name="or">或者</string>
    <string name="direct_login">直接购买</string>
    <string name="sign_in">登录</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="done">DONE</string>
    <string name="reset">RESET</string>
    <string name="filter">Filter</string>
    <string name="price">Price</string>
    <string name="delete">DELETE</string>
    <string name="unused">Unused</string>
    <string name="expired">Expired</string>
    <string name="used">Used</string>
    <string name="to_exchange">TO EXCHANGE</string>
    <string name="no_coupons">No Coupons</string>
    <string name="expired_on">Expired On</string>
    <string name="use_it">Use It</string>
    <string name="sold">Sold</string>
    <string name="end">End</string>
    <string name="to_end">To End</string>
    <string name="select_coupon">Select Coupon</string>
    <!-- firebase -->
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="description">Description</string>
    <string name="title_activity_toolbar">MainActivity</string>
    <string name="product_details_tips">" เก็บเงินปลายทาง ไม่ถูกใจคืนของได้ "</string>
    <string name="sold_tips">pieces have been sold</string>
    <string name="product_add_tips_1">เพิ่มไปยังรถเข็น</string>
    <string name="product_add_tips_2">ซื้อเพิ่มมีส่วนลด</string>
    <string name="Hint_Title">"hint title"</string>
    <!-- firebase -->
</resources>