<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<!--    <data>-->
<!--        <variable-->
<!--            name="recommend_prod"-->
<!--            type="com.test.myapplication.ui.home.HomeRecommendListViewModel" />-->
<!--    </data>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <ImageView
            android:id="@+id/recommend_prod_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/home_item_img"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_logo_jpg_405x540" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_product_sku_image_recyclerview" />

        <TextView
            android:id="@+id/marketPriceTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="4dp"
            android:text="@string/todo"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/salePriceTxt"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/salePriceTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="4dp"
            android:text="@string/todo"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

<!--        <ImageView-->
<!--            android:id="@+id/like"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="35dp"-->
<!--            android:contentDescription="@string/todo"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/title"-->
<!--            app:srcCompat="@drawable/ic_unlike" />-->

        <TextView
            android:id="@+id/discountTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/background_product_discount"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="@string/todo"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_product_sku_image_recyclerview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recommend_prod_img" />

<!--        <LinearLayout-->
<!--            android:id="@+id/home_product_bottom"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="8dp"-->
<!--            android:orientation="horizontal"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/like"-->
<!--            android:visibility="gone">-->

<!--            <ImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="40dp"-->
<!--                app:srcCompat="@drawable/test" />-->
<!--        </LinearLayout>-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>